modified front page

--- a/src/main/resources/templates/course/online_course.html
+++ b/src/main/resources/templates/course/online_course.html
@@ -110,6 +110,10 @@
                       <label>在线课程名称：</label>
                       <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：电影院星级的划分与评定" name="name">
                     </div>
+                    <div class="col-4">
+                      <label>发布时间：</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" name="date">
+                    </div>
                   </div>
                   <div class="form-group">
                     <button style="float: right" type="submit" class="btn btn-primary">筛选</button>
@@ -138,108 +142,6 @@
                         <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
                           <a style="float: right;" href="/documents/operate_details"> 详情>> </a>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-
-                    <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/cover/01电影技术基础知识篇（上）.jpg}" style="height:200px;width:100%;">
-                    </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">电影技术基础知识篇（上）</p>
-                    <div class="form-group row">
-                      <div class="col-11">
-                        <p style="padding-left: 10px; padding-bottom: 30px;">
-                          <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-
-                    <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/cover/02电影技术基础知识篇（下）.jpg}" style="height:200px;width:100%;">
-                    </div>
-                    <p style="padding-right: 10px; padding-left: 10px;">电影技术基础知识篇（下）</p>
-                    <div class="form-group row">
-                      <div class="col-11">
-                        <p style="padding-left: 10px; padding-bottom: 30px;">
-                          <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-                    <div style="padding-top:10px;">
-
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/split/投影灯盖板拆卸.jpg}" style="height: 200px; width:100%;">
-                    </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C投影灯盖板拆卸方法</p>
-                    <div class="form-group row">
-                      <div class="col-11">
-                        <p style="padding-left: 10px; padding-bottom: 30px;">
-                          <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/operate_details"> 详情>> </a>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-
-                    <div style=" padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/后盖板安装.jpg}" style="height:200px;width:100%;">
-                    </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C后盖板安装方法</p>
-                    <div class="form-group row">
-                      <div class="col-11">
-                        <p style="padding-left: 10px; padding-bottom: 30px;">
-                          <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-
-                    <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/密封盖板安装.jpg}" style="height:200px;width:100%;">
-                    </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C密封盖板安装方法</p>
-                    <div class="form-group row">
-                      <div class="col-11">
-                        <p style="padding-left: 10px; padding-bottom: 30px;">
-                          <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-3">
-                  <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
-
-                    <div style="padding-top:10px;">
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/左盖板安装.jpg}" style="height:200px;width:100%;">
-                    </div>
-                    <p style="padding-right: 10px; padding-left: 10px;">DP2K-20C左盖板安装方法</p>
-                    <div class="form-group row">
-                      <div class="col-11">
-                        <p style="padding-left: 10px; padding-bottom: 30px;">
-                          <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
                         </p>
                       </div>
                     </div>
