--- a/src/main/resources/templates/assets/equipment_details_k.html
+++ b/src/main/resources/templates/assets/equipment_details_k.html
@@ -20,6 +20,27 @@
   <script type=text/javascript th:src="@{/dist/js/lrtk.js}"></script>
   <script type=text/javascript th:src="@{/dist/js/jquery-1.4.2.min.js}"></script>
   <link rel=stylesheet type=text/css th:href="@{/dist/css/lrtk.css}">
+  <style>
+    .pics{
+      cursor: pointer;
+      border-radius: .25rem;
+      padding-top: 7.5px;
+      padding-bottom: 7.5px;
+    }
+    .pics:hover{
+      background-color: #e7e7e7;
+    }
+    .pics:active{
+      background-image: none;
+      box-shadow: inset 0 3px 5px
+      rgba(0,0,0,.125);
+    }
+    .pics img:focus{
+      outline: 0;
+      box-shadow: 0 0 0 .2rem
+      rgba(0,123,255,.25);
+    }
+  </style>
 </head>
 <body class="hold-transition sidebar-mini">
 <!-- Site wrapper -->
@@ -158,7 +179,7 @@
           </div>
           <!-- /.col -->
           <div class="col-md-9">
-            <div class="card">
+            <div class="card" >
               <div class="card-header p-2">
                 <ul class="nav nav-pills">
                   <li class="nav-item"><a class="nav-link active show" href="#activity" data-toggle="tab">图片视频</a></li>
@@ -177,59 +198,59 @@
                         <div class="col-sm-12">
                           <h6>设备图片视频信息</h6>
                         </div>
-                        <div class="col-sm-10 img-responsive">
-                          <table width="1000" height="600" border="0" align="center" cellpadding="0" cellspacing="0">
-                            <tr>
-                              <td>
-                                <div style="HEIGHT: 600px; OVERFLOW: hidden;" id=idTransformView class="img-responsive">
-                                  <ul id=idSlider class=slider>
-                                    <div class="row img-responsive">
-                                      <div class="img-responsive" style="POSITION: relative">
-                                        <ul class=txtbg></ul>
-                                        <span>科视Christie CP4325-RGB</span>
-                                        <a target="_blank"><img th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" width=1000 height=600></a>
-                                      </div>
-                                      <div style="POSITION: relative">
-                                        <ul class=txtbg></ul>
-                                        <span>科视Christie CP4325-RGB</span>
-                                        <a target="_blank"><img th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" width=1000 height=600></a>
-                                      </div>
-                                      <div style="POSITION: relative">
-                                        <ul class=txtbg ></ul>
-                                        <span>科视Christie CP4325-RGB</span>
-                                        <a target="_blank"><img th:src="@{/images/CP4325_Back_jpg.jpg}" width=1000 height=600></a>
-                                      </div>
-                                      <div style="POSITION: relative">
-                                        <ul class=txtbg></ul>
-                                        <span>科视Christie CP4325-RGB</span>
-                                        <a target="_blank"><img th:src="@{/images/CP4325_High_Front_jpg.jpg}" width=1000 height=600></a>
-                                      </div>
-                                    </div>
-                                  </ul>
-                                </div>
-                                <div>
-                                  <ul id=idNum class=hdnum>
-                                    <li><img th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" width=61px height=45px></li>
-                                    <li><img th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" width=61px height=45px></li>
-                                    <li><img th:src="@{/images/CP4325_Back_jpg.jpg}" width=61px height=45px></li>
-                                    <li><img th:src="@{/images/CP4325_High_Front_jpg.jpg}" width=61px height=45px></li>
-<!--                                    <li><img th:src="@{/images/play.png}" width=61px height=45px></li>-->
-                                  </ul>
-                                  <script language=javascript>
-                                    mytv("idNum","idTransformView","idSlider",1000,8,false,1000,8,false,"onclick");
-                                    //按钮容器aa，滚动容器bb，滚动内容cc，滚动宽度dd，滚动数量ee，滚动方向ff，延时gg，滚动速度hh，自动滚动ii，                              </script>
-                                </div>
-                              </td>
-                            </tr>
-                          </table>
-                          <!-- /.row -->
-                        </div>
-                        <div class="col-sm-1">
-                          &nbsp;
-                        </div>
-                        <!-- /.col -->
                       </div>
                       <!-- /.row -->
+                      <div class="row">
+                        <div class="col-md-12" style="padding-bottom: .5rem">
+                          <div id="myCarousel" class="carousel slide" >
+                            <!-- 轮播（Carousel）指标 -->
+                            <ol class="carousel-indicators">
+                              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                              <li data-target="#myCarousel" data-slide-to="1"></li>
+                              <li data-target="#myCarousel" data-slide-to="2"></li>
+                              <li data-target="#myCarousel" data-slide-to="3"></li>
+                            </ol>
+                            <!-- 轮播（Carousel）项目 -->
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" class="d-block w-100"  alt="First slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" class="d-block w-100"  alt="Second slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img th:src="@{/images/CP4325_Back_jpg.jpg}" class="d-block w-100"  alt="Third slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img th:src="@{/images/CP4325_High_Front_jpg.jpg}" class="d-block w-100"  alt="Forth slide">
+                              </div>
+                            </div>
+                            <!-- 轮播（Carousel）导航 -->
+                            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true" style="color: rgba(0,123,255,.5)"></span>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true" style="color: rgba(0,123,255,.5)"></span>
+                              <span class="sr-only">Next</span>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row" >
+                        <a class="col-md-2 col-sm-4 col-4 pics" id="pic0">
+                          <img th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" class="img-thumbnail">
+                        </a>
+                        <a class="col-md-2 col-sm-4 col-4 pics" id="pic1">
+                          <img th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" class="img-thumbnail">
+                        </a>
+                        <a class="col-md-2 col-sm-4 col-4 pics" id="pic2">
+                          <img th:src="@{/images/CP4325_Back_jpg.jpg}" class="img-thumbnail">
+                        </a>
+                        <a class="col-md-2 col-sm-4 col-4 pics" id="pic3">
+                          <img th:src="@{/images/CP4325_High_Front_jpg.jpg}" class="img-thumbnail">
+                        </a>
+                      </div>
                     </div>
                     <!-- /.post -->
                   </div>
@@ -469,7 +490,7 @@
   // });
 
   // View a list of images
-  const gallery = new Viewer(document.getElementById('images'));
+  // const gallery = new Viewer(document.getElementById('images'));
 
 </script>
 <script type="text/javascript">
@@ -493,6 +514,17 @@
     v.pause();
     $('.videos').html();
   }
+</script>
+<script language=javascript>
+
+  $(".pics").click(function () {
+    const mouseobjid = this.id;
+    for (i = 0; i < 4; i++){
+      if (mouseobjid == "pic"+i){
+        $(".carousel-indicators").find('li').eq(i).trigger('click');
+      }
+    }
+  })
 </script>
 </body>
 </html>
