add video details page

--- a/src/main/resources/templates/course/online_course.html
+++ b/src/main/resources/templates/course/online_course.html
@@ -141,7 +141,7 @@
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/operate_details"> 详情>> </a>
+                          <a style="float: right;" th:href="@{/course/course/{course}(course=${course.id})}"> 详情>> </a>
                         </p>
                       </div>
                     </div>
